@startuml

title __SKETCH.IT's Class Diagram__\n

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.clazz {
        class ClassDiagramGenerator {
        }
      }
    }
  }


  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ComponentDiagramGenerator {
        }
      }
    }
  }


  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.clazz {
        class Finder {
        }
      }
    }
  }


  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      class JavaFileFinder {
      }
    }
  }


  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.component {
        class ModulesHierarchyGenerator {
        }
      }
    }
  }


  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.ui {
      class Notifyer {
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      package org.pmesmeur.sketchit.diagram.plantuml {
        class PlantUmlWriter {
        }
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    class SketchIt {
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      class UmlComponentDiagram {
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      abstract class UmlDiagram {
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      class UmlDiagramsGenerator {
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      class UmlModuleClassDiagram {
      }
    }
  }
  

  package org.pmesmeur.sketchit {
    package org.pmesmeur.sketchit.diagram {
      class UmlSourceDirectoryClassDiagram {
      }
    }
  }
  

  ClassDiagramGenerator o-- PlantUmlWriter : plantUmlWriter
  ComponentDiagramGenerator o-- PlantUmlWriter : plantUmlWriter
  SketchIt -up-|> AnAction
  UmlComponentDiagram -up-|> UmlDiagram
  UmlModuleClassDiagram -up-|> UmlDiagram
  UmlSourceDirectoryClassDiagram -up-|> UmlDiagram


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
